src/objects/Interest_Details__c.object
<CustomObject>
    <description>Stores information to calculate interest so far on any account.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aging_System__c</fullName>
        <formula>if(
      OR (isnull(End_Date__c), isblank(End_Date__c)), 
       TODAY() - Start_Date__c, 
       End_Date__c - Start_Date__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aging (System)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Corrected_Age__c</fullName>
        <label>Corrected Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to opportunity record.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Interest Details</relationshipLabel>
        <relationshipName>Interest_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EFT_delayed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EFT delayed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Installment_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Installment Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_On_Flatcost__c</fullName>
        <label>Interest On Flatcost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_On_Servicetax__c</fullName>
        <label>Interest On Servicetax</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Standard Customer Pay Plan Detail</label>
        <referenceTo>Standard_Customer_Pay_Plan_Detail__c</referenceTo>
        <relationshipLabel>Interest Details</relationshipLabel>
        <relationshipName>Interest_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Interest Details</relationshipLabel>
        <relationshipName>Interest_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Receipt_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receipt Details</label>
        <referenceTo>Receipt_Details__c</referenceTo>
        <relationshipLabel>Interest Details</relationshipLabel>
        <relationshipName>Interest_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Receipt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receipt</label>
        <referenceTo>Receipt__c</referenceTo>
        <relationshipLabel>Interest Details</relationshipLabel>
        <relationshipName>Interest_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Tax_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Service Tax Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Interest Detail</label>
    <nameField>
        <displayFormat>Id-{000000000}</displayFormat>
        <label>Interest Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interest Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>